# VKING

./: .gitignore  CMakeLists.txt  LICENSE  README.md
CMake_Modules/: BuildWithOpenMP.cmake  FindFMT.cmake  FindGLFW.cmake  FindGLM.cmake  Finddylib.cmake  Findspdlog.cmake  VKING_Warnings.cmake
Engine/: CMakeLists.txt  EngineEntryPoint.cpp  EntryPoint.cpp
Engine/Config/Old (not linked)/: ConfigConstants.ixx  ConfigFns.cpp
Engine/EntryPointLib/: CMakeLists.txt  ConsoleEntryPoint.cpp  Win32GUIEntryPoint.cpp
Engine/PluginHost/: PluginHost.ixx
Engine/PluginHost/Render/: RenderPluginLoader.ixx
Engine/SDK/ABI/: HostLoggingABISpec.h  PluginVKING_CALLDef.h  RenderABISpec.h  VKINGHostToPluginABI.h
Engine/SDK/Logger/: LoggerTemplates.hpp
Engine/Services/Logger/: Logger.cpp  LoggerHost.hpp
Engine/Signals/: Signals.cpp
Engine/include/VKING/: MainCreator.hpp
Engine/include/VKING/SDK/: Logger.hpp  Prerequisites.hpp  StandardLibrary.hpp
Engine/include/VKING/SDK/ABI/: CPluginInterface.h
Engine/include/VKING/SDK/GLM/: AllGLM.hpp  GLMConfig.hpp
Platforms (old unlinked)/GLFW/: CMakeLists.txt  Callbacks.ixx  GLFW.ixx  Window.ixx
Platforms (old unlinked)/Glue-GLFWVulkan/: GLFWVulkan.cpp  Platform.Glue.GLFWVulkan.ixx
Platforms (old unlinked)/vulkan/: CMakeLists.txt  Vulkan.ixx
Projects/: CMakeLists.txt
Projects/Editor/: Application.ixx  CMakeLists.txt  main.cpp
src/: CMakeLists.txt
src/Engine/: Application.cpp  Application.hpp  Application.ixx  CMakeLists.txt  EntryPoint.cpp  EntryPointCallbacks.ixx
src/Engine/Config/: ConfigConstants.ixx  ConfigFns.cpp
src/Engine/Config/Old (not linked)/: ConfigFns.cpp
src/Engine/Logging/: Logger.cpp  LoggerConfig.hpp  LoggerHost.hpp  LoggerStableCABI.h  LoggerTemplates.hpp
src/Engine/Platform/: Platform.ixx
src/Engine/Plugins/: PluginABIBaseSpec.h  PluginHost.ixx  PluginVKING_CALLDef.h  VKINGHostToPluginABI.h
src/Engine/Plugins/Logging/: Logger.cpp  LoggerConfig.hpp  LoggerHost.hpp  LoggerStableCABI.h  LoggerTemplates.hpp
src/Engine/Plugins/Render/: RenderABISpec.h  RenderPlugin.ixx
src/Engine/RHI/: RHI.ixx  info.txt
src/Engine/Types/: Scored.hpp
src/Engine/Window/: Window.ixx
src/Engine/include/VKING/: CPluginInterface.h  Logger.hpp  MainCreator.hpp
src/Engine/include/VKING/ABI/: CPluginInterface.h
src/Engine/include/VKING/Engine/: Shutdown.hpp
src/Engine/include/VKING/SDK/: Logger.hpp
src/Engine/include/VKING/internal/: PCHTarget.hpp
src/Engine/platform/: CMakeLists.txt
src/Engine/platform/shared/: CMakeLists.txt
src/Engine/platform/shared/include/VKING/: Prerequisites.hpp
src/Engine/platform/shared/src/: GLMDebug.cpp
src/Engine/platform/shared/src/VKING/: Log.ixx
src/Projects/Editor/: Application.ixx  CMakeLists.txt  main.cpp
src/Shared/: CMakeLists.txt
src/Shared/include/VKING/: Prerequisites.hpp  ScoredType.hpp  Signals.hpp
src/Shared/src/: GLMDebug.cpp  ScoredType.hpp  Signals.cpp  Signals.hpp
src/Shared/src/VKING/: Log.ixx
src/Types/: CMakeLists.txt
src/Types/src/: Platform.ixx  Window.ixx
